[project]
name = "whatsapp-analyzer-railway"
version = "0.1.0"
description = "WhatsApp chat analyzer with AI formatting and Google integration"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "flask-cors>=4.0.0",
    "openai>=1.30.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
whatsapp-analyzer = "chat_analyzer_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
